<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection"
        android:title="@string/nav_collection" />
    <item
        android:id="@+id/navigation_expansions"
        android:icon="@drawable/ic_expansions"
        android:title="@string/nav_expansions" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/nav_wishlist" />
    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_lists"
        android:title="@string/nav_lists" />
</menu>